# zodb-json-codec

./: .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  CHANGES.md  Cargo.toml  LICENSE  PERF_REPORT_COMPOUND.md  PERF_REPORT_ROUND1.md  PERF_REPORT_ROUND2.md  PERF_REPORT_ROUND3.md  PERF_REPORT_ROUND4.md  README.md  RELEASE.md  TYPE_MAPPING.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: bench.py
docs/.vale/styles/config/vocabularies/Project/: accept.txt
docs/sources/: conf.py  index.md  llms.txt
docs/sources/_static/: site.webmanifest
docs/sources/_templates/: layout.html
docs/sources/_templates/partials/: extra-head.html
docs/sources/explanation/: architecture.md  index.md  optimization-journal.md  performance.md  security.md  why-json.md
docs/sources/how-to/: build-from-source.md  handle-custom-types.md  index.md  install.md  integrate-pgjsonb.md  run-benchmarks.md
docs/sources/reference/: btree-format.md  changelog.md  index.md  json-format.md  project-structure.md  python-api.md
docs/sources/tutorials/: getting-started.md  index.md  zodb-records.md
python/zodb_json_codec/: __init__.py
src/: btrees.rs  decode.rs  encode.rs  error.rs  json.rs  json_writer.rs  known_types.rs  lib.rs  opcodes.rs  pyconv.rs  types.rs  zodb.rs
tests/: conftest.py  test_basic_types.py  test_btrees.py  test_known_types.py  test_pg_json.py  test_zodb_records.py
