[package]
name = "zodb-json-codec"
version = "1.0.0"
edition = "2021"
description = "Fast pickle ↔ JSON transcoder for ZODB, implemented in Rust"
readme = "README.md"
license = "MIT"
repository = "https://github.com/bluedynamics/zodb-json-codec"
homepage = "https://github.com/bluedynamics/zodb-json-codec"

[lib]
name = "zodb_json_codec"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"
num-bigint = "0.4"
