[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "zodb-json-codec"
version = "0.1.0"
description = "Fast pickle to JSON transcoder for ZODB, implemented in Rust"
requires-python = ">=3.10"
license = "MIT"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "zodb_json_codec._rust"
