[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "zodb-json-codec"
dynamic = ["version"]
description = "Fast pickle to JSON transcoder for ZODB, implemented in Rust"
requires-python = ">=3.10"
license = "MIT"

[project.optional-dependencies]
test = [
    "pytest",
    "persistent",
    "ZODB",
    "BTrees",
    "pytz",
]
bench = [
    "ZODB",
    "BTrees",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "zodb_json_codec._rust"
